# keyframekit

./: README.md  cli.py  extract_single_video.py  extractor.py  pyproject.toml  test_keyframekit.py
.github/workflows/: publish.yml
keyframekit/: __init__.py  cli.py  clustering.py  extractor.py  vision.py
