[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyframekit"
version = "0.1.0"
description = "Extract representative keyframes from videos using configurable vision models and clustering"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "opencv-python>=4.8",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
plot  = ["matplotlib>=3.7"]
dev   = ["pytest>=8", "pytest-cov", "ruff", "mypy"]

[project.scripts]
keyframekit = "keyframekit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["keyframekit*"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = [".pytest_cache", "pytest-cache-files-*"]
